--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,14 @@
-@import "../node_modules/tailwindcss/base.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities; 
+
+/* @import "tailwindcss/base";
+@import "tailwindcss/components";
+
+@import "tailwindcss/utilities"; */
+
+/* @import "../node_modules/tailwindcss/base.css";
 
 @import "../node_modules/tailwindcss/components.css";
 
-@import "../node_modules/tailwindcss/utilities.css";
+@import "../node_modules/tailwindcss/utilities.css"; */
